--- a/DockerFile
+++ b/DockerFile
@@ -1,11 +1,6 @@
-FROM openjdk:11-jdk
-VOLUME /tmp
- 
-RUN useradd -d /home/appuser -m -s /bin/bash appuser
-USER appuser
- 
-HEALTHCHECK --interval=5m --timeout=3s CMD curl -f http://localhost:8080/actuator/health/ || exit 1
- 
-ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+FROM openjdk:11.0.4-jre-slim
+
+ADD target/library-management-service-0.0.1-SNAPSHOT.jar library-management-service.jar
+
+ENTRYPOINT ["java","-jar","library-management-service.jar"]
+EXPOSE 8080
