--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,7 @@
-FROM openjdk:11.0.4-jre-slim
+FROM openjdk:11
 
-ADD target/library-management-service-0.0.1-SNAPSHOT.jar library-management-service.jar
+EXPOSE 8080
+
+ADD target/library-management-service.jar library-management-service.jar
 
 ENTRYPOINT ["java","-jar","library-management-service.jar"]
-EXPOSE 8080
