--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     - mvn clean install
     - echo Logging in to Amazon ECR...
     - aws --version
-    - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+    - $(aws ecr get-login --region us-east-1 --no-include-email)
     - REPOSITORY_URI=389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry
     - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
     - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
@@ -17,16 +17,16 @@ phases:
     - echo Build started on `date`
     - echo Building the Docker image...
     - mvn package
-    - docker build -t $REPOSITORY_URI:latest .
-    - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+    - docker build -t 389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry:latest .
+    - docker tag 389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry:latest 389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry:$IMAGE_TAG
   post_build:
     commands:
     - echo Build completed on `date`
     - echo Pushing the Docker images...
-    - docker push $REPOSITORY_URI:latest
-    - docker push $REPOSITORY_URI:$IMAGE_TAG
+    - docker push 389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry:latest
+    - docker push 389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry:$IMAGE_TAG
     - echo Writing image definitions file...
-    - printf '[{"name":"library-management-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+    - printf '[{"name":"library-management-service","imageUri":"%s"}]' 389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry:$IMAGE_TAG > imagedefinitions.json
     - cat imagedefinitions.json
 artifacts:
     files:
