--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,12 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      docker: 18
+      docker: 20
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region __ECR_REGION__ --no-include-email)
+      - $(aws ecr get-login --region us-east-1 --no-include-email)
       - REPOSITORY_URI=389293849742.dkr.ecr.us-east-1.amazonaws.com/library-management-registry
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
